CIR-I3715 | alignment issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -8883,3 +8883,7 @@ table.group-process-table {
     position: absolute;
   }
 }
+
+.pie-chart-container {
+  height: 30px;
+}
